
http://www.packetfence.org/support/community.html

This is a list of noteworthy changes across releases. 
For more details and developer visible changes see the ChangeLog file.
For a list of compatibility related changes see the UPGRADE file.


--------------------------------------------------------------------------------
Version <version> released on <releaseDate>

New Features
 * Ability to view log files from the Web Administration interface (#1080)

Enhancements
 * New DHCP fingerprints for Polycom and Snom
 * New controllerIp network device parameter will make it simpler to support
   wireless hardware working in bridged mode
 * Developer documentation to add Floating Network Devices support to switches

Bug fixes
 * Fixed nessus scans don't work with bin/pfcmd as a setuid/setgid (#1087)
 * Fixed custom VLAN assignments relying on connection_type failing on "unknown"
   nodes (#1231)
 * Fixed configurator.pl does not show interfaces without IP address (#1221)

--------------------------------------------------------------------------------
Version 2.2.1 released on 2011-06-16

New Hardware Support
 * AeroHIVE AP Access Points
 * Dlink DES 3550 switch (Thanks to Olivier Roch Vilato)
 * Dlink DGS 3200 switch
 * HP ProCurve 5400 Series
 * ExtremeNetworks Summit now supports MAC Authentication and 802.1X

New Features
 * Basic WISPR support improves iPod/iPhone/iPad usability (#815)

Enhancements
 * Performance improvement for RADIUS based requests in environments with large
   conf/switches.conf files
 * Increased responsiveness of VLAN assignments by reducing the available node
   information (got rid of unused fields)
 * Nortel module now warns in the logs about a common stacking Nortel problem
 * New DHCP fingerprint for Cisco/Linksys, Aruba, 3Com switch, HTC Android, 
   Polycom, Konica Minolta MFP's and HP Printers
 * Warning avoidance
 * New FreeRADIUS and pfdhcplistener watchdog scripts in addons/watchdog/